openshift/build-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    role: jenkins-slave
  name: build-pod
spec:
  containers:
    - image: ebo-python-builder/python-builder:latest
      command:
        - cat
      volumeMounts:
        - mountPath: /home/jenkins
          name: workspace-volume
          readOnly: false
        - mountPath: /etc/config
          name: config-volume
      name: python
      tty: true
    - name: jnlp
      image: jenkins/jnlp-slave:latest
      volumeMounts:
        - mountPath: /home/jenkins
          name: workspace-volume
          readOnly: false
  volumes:
    - emptyDir: {}
      name: workspace-volume
    - name: config-volume
      configMap:
        name: pypirc-config
