openshift/dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: refactored-memory
    app.kubernetes.io/component: refactored-memory
    app.kubernetes.io/instance: refactored-memory
  name: refactored-memory
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: refactored-memory
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deploymentconfig: refactored-memory
    spec:
      containers:
      - env:
        - name: _PYPIRC
          valueFrom:
            configMapKeyRef:
              key: .pypirc
              name: refactored-memory
        - name: BIND_PORT
          valueFrom:
            configMapKeyRef:
              key: BIND_PORT
              name: refactored-memory
        - name: NEXUS_HOSTNAME
          valueFrom:
            configMapKeyRef:
              key: NEXUS_HOSTNAME
              name: refactored-memory
        - name: PYPI_GROUP_REPO
          valueFrom:
            configMapKeyRef:
              key: PYPI_GROUP_REPO
              name: refactored-memory
        image: docker-registry.default.svc:5000/refactored-memory-dev/refactored-memory@sha256:fb26f03da6150055de14c41255b5d9646f7894f176f1c8b7ceabe03323aa6193
        imagePullPolicy: IfNotPresent
        name: refactored-memory
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - refactored-memory
      from:
        kind: ImageStreamTag
        name: refactored-memory:0.0-0
        namespace: refactored-memory-dev
      lastTriggeredImage: docker-registry.default.svc:5000/refactored-memory-dev/refactored-memory@sha256:fb26f03da6150055de14c41255b5d9646f7894f176f1c8b7ceabe03323aa6193
    type: ImageChange
