openshift/frontend-deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    app: frontend
    deploymentconfig: frontend
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: frontend
        deploymentconfig: frontend
    spec:
      containers:
        - env:
            - name: VERSION
              value: 0.0.0 (frontend-dev)
            - name: PORT
              valueFrom:
                configMapKeyRef:
                  key: BIND_PORT
                  name: refactored-memory
          image: image-registry.openshift-image-registry.svc:5000/ebo-pipelines/frontend:latest
          imagePullPolicy: Always
          name: frontend
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers: []
