openshift/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend
spec:
  ports:
    - name: 8088-tcp
      port: 8088
      protocol: TCP
      targetPort: 8088
  selector:
    app: backend
    deploymentconfig: backend
  sessionAffinity: None
  type: ClusterIP
