openshift/backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  ports:
    - name: 8088-tcp
      port: 8088
      protocol: TCP
      targetPort: 8088
  selector:
    app: backend
    deploymentconfig: backend
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    app: backend
    deploymentconfig: backend
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: backend
        deploymentconfig: backend
    spec:
      containers:
        - env:
          - name: VERSION
            value: 0.0.0 (backend-dev)
          - name: PORT
            valueFrom:
              configMapKeyRef:
                key: BIND_PORT
                name: refactored-memory
          image: image-registry.openshift-image-registry.svc:5000/ebo-pipelines/backend
          imagePullPolicy: Always
          name: backend
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers: []
