openshift/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  ports:
    - name: 8088-tcp
      port: 8088
      protocol: TCP
      targetPort: 8088
  selector:
    app: frontend
    deploymentconfig: frontend
  sessionAffinity: None
  type: ClusterIP
